# EnvManagerCLI

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: main.rs
src/commands/: switch.rs
src/helpers/: variables.rs
src/types/: common.rs  mod.rs  variable.rs
