[package]
name = "enm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version= "4.5.46", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
owo-colors = "4.2.3"
tokio = { version = "1.48.0", features = ["full"] }